manifest/gatakko-user/sshd.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sshd
  namespace: gatakko-user
spec:
  selector:
    app: sshd
  ports:
  - name: ssh
    port: 22
  type: LoadBalancer
  externalTrafficPolicy: Local
