manifest/gatakko-user/xrdp.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: xrdp
  namespace: gatakko-user
spec:
  selector:
    app: xrdp
  ports:
  - name: xrdp
    port: 3389
  type: LoadBalancer
  externalTrafficPolicy: Local
